--- a/client/src/components/Nav.css
+++ b/client/src/components/Nav.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 .navbar {
-  background-color: #DE4949;
+  background-color: #EC8FA4;
   padding: 10px 20px;
   display: flex;
   justify-content: space-between;
@@ -13,7 +13,7 @@
   font-family: 'Poppins', sans-serif;
   margin-right: 20px;
   font-size: 22px;
-  
+
 }
 
 .navbar ul {
