--- a/client/src/components/Register.css
+++ b/client/src/components/Register.css
@@ -66,7 +66,7 @@
     font-size: 20px;
 }
 
-.wrapper .btn-login {
+.wrapper .btn-register {
     width: 100%;
     height: 45px;
     background: white;
@@ -80,13 +80,13 @@
     font-weight: 600;
 }
 
-.wrapper .register-link {
+.wrapper .login-link {
     font-size: 14.5px;
     text-align: center;
     margin: 20px 0 15px;
 }
 
-.register-link p a {
+.login-link p a {
     color: white;
     text-decoration: none;
     font-weight: 600;
