--- a/client/src/components/Nav.css
+++ b/client/src/components/Nav.css
@@ -21,3 +21,9 @@
   align-items: center;
   list-style-type: none;
 }
+
+.navbar-div {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+}
