--- a/client/src/components/Catalog.css
+++ b/client/src/components/Catalog.css
@@ -1,34 +1,36 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);
-@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic);
-/*Here*/
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic');
 
-#catalog {
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  background: url('../static/book-photo-home.png') center/cover no-repeat;
+}
+
+.catalog {
   max-width: 100%;
   text-align: center;
   margin-top: 1em;
+  position: relative;
+  z-index: 1;
 }
 
-#catalog>h1 {
-  margin-top: 1em;
-  margin-bottom: 0.5em;
-  font-weight: 700;
-  line-height: 1.1;
-  padding: 7px;
-  letter-spacing: 0px;
-  font-size: 4rem;
-  text-transform: capitalize;
-  font-family: Georgia, serif;
+.catalog>h1 {
+  margin: 1em 0 0.5em;
+  font: bold 4rem/1.1 Georgia, 'Ubuntu', sans-serif;
   color: #EC8FA4 !important;
-  font-weight: bold;
-  font-family: Ubuntu, sans-serif !important;
+  padding: 7px;
+  text-transform: capitalize;
 }
 
-.front > h1 {
+.front>h1 {
   margin-top: -8em;
   font-size: 2.1em;
 }
 
-.front > img {
+.front>img {
   width: 100%;
   height: 100%;
 }
@@ -37,84 +39,90 @@
   width: 98%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  box-shadow: 0 0px 81px green;
+  justify-content: center;
+  align-items: stretch;
+  box-shadow: 0 0 81px white;
+  background-color: rgba(236, 143, 164, 0.8);
   background-color: #EC8FA4;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  margin-left: 1.5em;
+  padding: 20px 0;
+  margin: 0 auto;
+
+  position: relative;
+  z-index: 2;
 }
 
 .flip {
   position: relative;
+  margin: 1em;
 }
 
-.flip > .front,
-.flip > .back {
+.flip>.front,
+.flip>.back {
   display: block;
-  transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  transition-duration: 0.5s;
-  transition-property: transform, opacity;
+  transition: transform 0.5s, opacity 0.5s;
 }
 
-.flip > .front {
+.flip>.front {
   transform: rotateY(0deg);
 }
 
-.flip > .back {
+.flip>.back {
   position: absolute;
-  /* opacity: 0; */
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   transform: rotateY(-180deg);
 }
 
-.flip-vertical > .back {
+.flip-vertical>.back {
   transform: rotateX(-180deg);
 }
 
-.flip-vertical > .front:hover {
+.flip-vertical>.front:hover {
   transform: rotateX(180deg);
 }
 
-.flip-vertical > .back {
+.flip-vertical>.back {
   transform: rotateX(0deg);
 }
-/* custom*/
 
 .flip {
   position: relative;
   display: inline-block;
-  margin-right: 20px;
-  margin-bottom: 1em;
-  margin-top: 1em;
-  margin-left: 2em;
+  margin: 1em 20px 1em 2em;
   width: 350px;
 }
 
-.flip > .front,
-.flip > .back {
-  display: block;
+.flip>.front,
+.flip>.back {
+  display: flex; /* Use flexbox to align items */
+  flex-direction: column; /* Stack items vertically */
+  justify-content: center; /* Center items vertically */
+  align-items: center; /* Center items horizontally */
   color: white;
   width: inherit;
-  background-size: cover !important;
-  background-position: center !important;
   height: 350px;
-  width: 350px;
-  padding: 1em 1em;
-  background: #313131;
+  padding: 1em;
   border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
 }
 
-.flip > .back > h2 {
+.product-image {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.flip>.back {
   font-size: 1.5rem;
   padding-top: 5px;
   color: #999;
 }
 
-.flip > .back > p {
+.flip>.back>p {
   font-size: 0.9125rem;
   padding-top: 20px;
   line-height: 180%;
@@ -122,16 +130,13 @@
   color: #999;
 }
 
-img > .text-shadow {
-  text-shadow: 1px 1px rgba(0, 0, 0, 0.04), 2px 2px rgba(0, 0, 0, 0.04),
-    3px 3px rgba(0, 0, 0, 0.04), 4px 4px rgba(0, 0, 0, 0.04),
-    0.125rem 0.125rem rgba(0, 0, 0, 0.04), 6px 6px rgba(0, 0, 0, 0.04),
-    7px 7px rgba(0, 0, 0, 0.04), 8px 8px rgba(0, 0, 0, 0.04),
-    9px 9px rgba(0, 0, 0, 0.04), 0.3125rem 0.3125rem rgba(0, 0, 0, 0.04),
-    11px 11px rgba(0, 0, 0, 0.04), 12px 12px rgba(0, 0, 0, 0.04),
-    13px 13px rgba(0, 0, 0, 0.04), 14px 14px rgba(0, 0, 0, 0.04),
-    0.625rem 0.625rem rgba(0, 0, 0, 0.04), 16px 16px rgba(0, 0, 0, 0.04),
-    17px 17px rgba(0, 0, 0, 0.04), 18px 18px rgba(0, 0, 0, 0.04),
+.text-shadow {
+  text-shadow: 1px 1px rgba(0, 0, 0, 0.04), 2px 2px rgba(0, 0, 0, 0.04), 3px 3px rgba(0, 0, 0, 0.04),
+    4px 4px rgba(0, 0, 0, 0.04), 0.125rem 0.125rem rgba(0, 0, 0, 0.04), 6px 6px rgba(0, 0, 0, 0.04),
+    7px 7px rgba(0, 0, 0, 0.04), 8px 8px rgba(0, 0, 0, 0.04), 9px 9px rgba(0, 0, 0, 0.04),
+    0.3125rem 0.3125rem rgba(0, 0, 0, 0.04), 11px 11px rgba(0, 0, 0, 0.04), 12px 12px rgba(0, 0, 0, 0.04),
+    13px 13px rgba(0, 0, 0, 0.04), 14px 14px rgba(0, 0, 0, 0.04), 0.625rem 0.625rem rgba(0, 0, 0, 0.04),
+    16px 16px rgba(0, 0, 0, 0.04), 17px 17px rgba(0, 0, 0, 0.04), 18px 18px rgba(0, 0, 0, 0.04),
     19px 19px rgba(0, 0, 0, 0.04), 1.25rem 1.25rem rgba(0, 0, 0, 0.04);
 }
 
@@ -140,45 +145,59 @@ img > .text-shadow {
   border: none;
   padding: 15px;
   outline: none;
-  font-size: 18px;
-  margin-top: 30px;
-  margin-left: 10px;
+  font-size: 14px;
+  margin: 30px 0 0 10px;
   background: #EC8FA4;
   border-radius: 12px;
-  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-  -webkit-transition: 300ms ease-in-out;
-  -o-transition: 200ms ease-in-out;
-  transition: 200ms ease-in-out;
 }
 
-.details:hover {
-  -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1);
-}
-
-
-
-.no-posts > .no-offer {
+.no-posts>.no-offer {
   font-size: 44px;
   font-style: italic;
 }
 
 .no-posts-img {
   display: inline;
-  width: 380px;
-  /*  margin-left: 40%;*/
-  height: 530px;
+  width: 380
 }
 
-.no-posts-img > img {
-  width: 400px;
-  display: inline-block;
-  height: 330px;
-  border-radius: 10px;
-  border: 13px solid #313131;
+.flip>.back h1,
+.flip>.back h2,
+.flip>.back p,
+.flip>.back a {
+  margin: 0px 0;
+  padding: 8px;
+  text-align: center;
 }
 
+.flip>.back h1 {
+  font-size: 1.5rem;
+  /* Adjust the font size as needed */
+}
 
+.flip>.back h2 {
+  font-size: 1.2rem;
+  color: #999;
+}
 
+.flip>.back p {
+  font-size: 1.2rem;
+  line-height: 180%;
+  margin-bottom: 0em;
+  /* Adjust margin as needed */
+  color: #999;
+}
+
+.details {
+  color: #fff;
+  border: none;
+  padding: 15px;
+  outline: none;
+  font-size: 14px;
+  margin-top: 1em;
+  /* Adjust margin as needed */
+  background: #EC8FA4;
+  border-radius: 12px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
