--- a/client/src/components/Catalog.css
+++ b/client/src/components/Catalog.css
@@ -114,21 +114,16 @@ body {
   height: auto;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-height: 150px;
+  max-width: 200px;
 }
 
 .flip>.back {
   font-size: 1.5rem;
   padding-top: 5px;
-  color: #999;
+  background-color: #9CBA63;
 }
 
-.flip>.back>p {
-  font-size: 0.9125rem;
-  padding-top: 20px;
-  line-height: 180%;
-  margin-bottom: 4em;
-  color: #999;
-}
 
 .text-shadow {
   text-shadow: 1px 1px rgba(0, 0, 0, 0.04), 2px 2px rgba(0, 0, 0, 0.04), 3px 3px rgba(0, 0, 0, 0.04),
@@ -186,7 +181,7 @@ body {
   line-height: 180%;
   margin-bottom: 0em;
   /* Adjust margin as needed */
-  color: #999;
+  color: white;
 }
 
 .details {
