--- a/client/src/components/Create.css
+++ b/client/src/components/Create.css
@@ -27,7 +27,7 @@
     position: relative;
     width: 100%;
     height: 50px;
-    margin: 30px 0; 
+    margin: 30px 20px 50px 5px;
 }
 
 .input-box input {
