--- a/client/src/components/Catalog.css
+++ b/client/src/components/Catalog.css
@@ -7,6 +7,7 @@ body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
   background: url('../static/book-photo-home.png') center/cover no-repeat;
+  background-attachment: fixed;
 }
 
 .catalog {
@@ -96,10 +97,10 @@ body {
 
 .flip>.front,
 .flip>.back {
-  display: flex; /* Use flexbox to align items */
-  flex-direction: column; /* Stack items vertically */
-  justify-content: center; /* Center items vertically */
-  align-items: center; /* Center items horizontally */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   color: white;
   width: inherit;
   height: 350px;
@@ -121,7 +122,7 @@ body {
 .flip>.back {
   font-size: 1.5rem;
   padding-top: 5px;
-  background-color: #9CBA63;
+  background-color: rgba(0, 0, 0, 0.5);;
 }
 
 
