refactoring the context and put the jsx and css files in folders

--- a/client/src/components/Catalog/Catalog.css
+++ b/client/src/components/Catalog/Catalog.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  background: url('../static/book-photo-home.png') center/cover no-repeat;
+  background: url('../../static/book-photo-home.png') center/cover no-repeat;
   background-attachment: fixed;
 }
 
