--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -7,7 +7,7 @@ body {
 }
 
 .slider_container {
-    background-image: url('../static/book-photo-home.png');
+    background-image: url('../../static/book-photo-home.png');
     background-size: cover;
     background-position: center; 
     color: #fff;
