--- a/client/src/components/Create/Create.css
+++ b/client/src/components/Create/Create.css
@@ -9,7 +9,7 @@
 
 .container-wrapper {
     min-height: 100vh;
-    background: url('../static/book-photo-home.png') no-repeat;
+    background: url('../../static/book-photo-home.png') no-repeat;
     background-size: cover;
     background-position: center;
     display: flex;
@@ -48,7 +48,7 @@
 }
 
 
-.wrapper .btn-edit {
+.wrapper .btn-create {
     width: 100%;
     height: 45px;
     background: #EC8FA4;
@@ -58,6 +58,6 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     cursor: pointer;
     font-size: 16px;
-    color: #333;
+    color: white;
     font-weight: 600;
 }
