--- a/client/src/components/Edit/Edit.css
+++ b/client/src/components/Edit/Edit.css
@@ -9,22 +9,13 @@
 
 .container-wrapper {
     min-height: 100vh;
-    background: url('../static/book-photo-home.png') no-repeat;
+    background: url('../../static/book-photo-home.png') no-repeat;
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
     display: flex;
     justify-content: center;
     padding-top: 200px;
     padding-bottom: 500px;
-}
-
-.wrapper {
-    width: 420px;
-    background: rgba(0, 0, 0, 0.5);
-    color: white;
-    border-radius: 10px;
-    padding: 30px 40px;
 }
 
 .wrapper h1 {
@@ -36,7 +27,7 @@
     position: relative;
     width: 100%;
     height: 50px;
-    margin: 30px 0; 
+    margin: 30px 20px 50px 5px;
 }
 
 .input-box input {
@@ -56,18 +47,11 @@
     color: white;
 }
 
-.input-box i {
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;
-}
 
-.wrapper .btn-register {
+.wrapper .btn-edit {
     width: 100%;
     height: 45px;
-    background: white;
+    background: #EC8FA4;
     border: none;
     outline: none;
     border-radius: 40px;
@@ -75,17 +59,5 @@
     cursor: pointer;
     font-size: 16px;
     color: #333;
-    font-weight: 600;
-}
-
-.wrapper .login-link {
-    font-size: 14.5px;
-    text-align: center;
-    margin: 20px 0 15px;
-}
-
-.login-link p a {
-    color: white;
-    text-decoration: none;
     font-weight: 600;
 }
