--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -7,15 +7,25 @@
     font-family: 'Poppins', sans-serif;
 }
 
+
 .container-wrapper {
     min-height: 100vh;
-    background: url('../static/book-photo-home.png') no-repeat;
+    background: url('../../static/book-photo-home.png') no-repeat;
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
     display: flex;
     justify-content: center;
     padding-top: 200px;
     padding-bottom: 500px;
+}
+
+.wrapper {
+    width: 420px;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border-radius: 10px;
+    padding: 30px 40px;
 }
 
 .wrapper h1 {
@@ -27,7 +37,7 @@
     position: relative;
     width: 100%;
     height: 50px;
-    margin: 30px 20px 50px 5px;
+    margin: 30px 0; 
 }
 
 .input-box input {
@@ -47,17 +57,36 @@
     color: white;
 }
 
+.input-box i {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+}
 
-.wrapper .btn-create {
+.wrapper .btn-login {
     width: 100%;
     height: 45px;
-    background: #EC8FA4;
+    background: white;
     border: none;
     outline: none;
     border-radius: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     cursor: pointer;
     font-size: 16px;
+    color: #333;
+    font-weight: 600;
+}
+
+.wrapper .register-link {
+    font-size: 14.5px;
+    text-align: center;
+    margin: 20px 0 15px;
+}
+
+.register-link p a {
     color: white;
+    text-decoration: none;
     font-weight: 600;
 }
