--- a/client/src/components/Register/Register.css
+++ b/client/src/components/Register/Register.css
@@ -7,10 +7,9 @@
     font-family: 'Poppins', sans-serif;
 }
 
-
 .container-wrapper {
     min-height: 100vh;
-    background: url('../static/book-photo-home.png') no-repeat;
+    background: url('../../static/book-photo-home.png') no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -65,7 +64,7 @@
     font-size: 20px;
 }
 
-.wrapper .btn-login {
+.wrapper .btn-register {
     width: 100%;
     height: 45px;
     background: white;
@@ -79,13 +78,13 @@
     font-weight: 600;
 }
 
-.wrapper .register-link {
+.wrapper .login-link {
     font-size: 14.5px;
     text-align: center;
     margin: 20px 0 15px;
 }
 
-.register-link p a {
+.login-link p a {
     color: white;
     text-decoration: none;
     font-weight: 600;
