--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -27,3 +27,10 @@
   align-items: center;
   list-style-type: none;
 }
+
+/* Add this to your existing CSS */
+
+.logo {
+  max-height: 60px;
+  margin-right: auto;
+}
