--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -68,14 +68,14 @@
 .wrapper .btn-login {
     width: 100%;
     height: 45px;
-    background: white;
+    background: #EC8FA4;
     border: none;
     outline: none;
     border-radius: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     cursor: pointer;
     font-size: 16px;
-    color: #333;
+    color: white;
     font-weight: 600;
 }
 
