--- a/client/src/components/Details/Details.css
+++ b/client/src/components/Details/Details.css
@@ -230,6 +230,7 @@ span {
     flex-direction: column;
     align-items: flex-start;
     margin-top: 20px;
+    width: 200px;
 }
 
 .bid-price input {
@@ -239,6 +240,7 @@ span {
     border-radius: 5px;
     margin-bottom: 10px;
     box-sizing: border-box;
+    text-align: center;
 }
 
 .bid-price button {
